feat: Move the Mision planning logic to new MissionControl class.
Changes:
- Creare a MissionControl class to manage missions for a Settlement.
- Move the mission planning logic from MissionPlanning to MissionControl.
- Update the MissionPlanning class to use MissionControl for mission management.
- Settlement creates a MissionControl instance to manage its missions.
- MissionPlan console command is not a Settlement command not global.
- MissionControl uses the ScheduledEvent framework to perform daily updates on daybreak
Also
- Make EntityContentFactory.getEntityPanel more definsive for bad ui_settings
- MarsTime calculates when a specified mSol will next occur

ref #1904